# modo_plasticity_kit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE
.github/workflows/: cmake-multi-platform.yml  workflow.yml
kit_files/: index.cfg
kit_files/Configs/: icons_20.cfg  icons_32.cfg  plasticity_form.cfg  plasticity_modes_tail.cfg
src/: geometry.hpp  log.cpp  log.hpp  main.cpp  modo.cpp  modo.hpp  plasticity.cpp  plasticity.hpp  websocket.cpp  websocket.hpp
